Fix spacing in user profile

--- a/projects/commudle-admin/src/app/feature-modules/users/components/public-profile/user-extra-details/user-content/user-contributions/user-contributions.component.scss
+++ b/projects/commudle-admin/src/app/feature-modules/users/components/public-profile/user-extra-details/user-content/user-contributions/user-contributions.component.scss
@@ -5,7 +5,7 @@
     position: relative;
 
     &:not(&:last-child) {
-      margin-bottom: $space-40;
+      margin-bottom: $space-64;
     }
 
     &:hover {
@@ -15,14 +15,11 @@
     }
 
     .header {
-      width: max-content;
-      margin: 0 0 $space-24;
-      padding-bottom: $space-8;
+      margin-bottom: $space-24;
       font-size: $fs-24;
       font-weight: $fw-600;
       line-height: 28px;
       color: $gunmetal;
-      border-bottom: 1px solid $chinese-silver;
     }
 
     .content {
